tests/codegen/errors/reader/special-forms/atom.reader.error.reader.cond.clause.missing.bracket/reader-cond-clause-missing-bracket.mon
;; TEST-ID: tests.codegen.reader-error.reader-cond-clause-missing-bracket
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/special-forms
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ']' to close cond clause
;; TEST-ATOM: atom.reader.error.reader.cond.clause.missing.bracket
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.cond.clause.missing.bracket
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ']' to close cond clause
;; TEST-READER-PATH: reader.c:3096 parser.cond
;; TEST-CODEGEN-PATH: diagnostic.parser.cond
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:3096 Expected ']' to close cond clause
;; TEST-USES-ATOM: atom.reader.error.reader.cond.clause.missing.bracket
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.cond
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/special-forms/atom.reader.error.reader.cond.clause.missing.bracket
;; TEST-MENU-PATH: codegen/errors/reader/special-forms/atom.reader.error.reader.cond.clause.missing.bracket
;; TEST-ATOM-LEAF: atom.reader.error.reader.cond.clause.missing.bracket
;; TEST-CLI-TARGET: codegen errors reader special-forms

(module Main)
(cond [True 1)
